fix: roblox plus sidebar thingy was not centered when sidebar was collapsed

--- a/src/css/features/sitewide/sidebar_collapse.scss
+++ b/src/css/features/sitewide/sidebar_collapse.scss
@@ -62,9 +62,34 @@ $roblox-left-nav-breakpoint: 768px;
         padding-left: 0 !important;
         padding-right: 0 !important;
     }
+
+    li[data-rovalra-sidebar-layout-key*="href:/plus"] > a {
+        width: 48px !important;
+        min-width: 48px !important;
+        height: 48px !important;
+        min-height: 48px !important;
+        padding: 0 !important;
+        margin-left: auto !important;
+        margin-right: auto !important;
+        display: flex !important;
+        align-items: center !important;
+        justify-content: center !important;
+        flex-direction: row !important;
+        box-sizing: border-box !important;
+    }
+
+    li[data-rovalra-sidebar-layout-key*="href:/plus"] > a > span:nth-child(2),
+    li[data-rovalra-sidebar-layout-key*="href:/plus"] > a > span:nth-child(3) {
+        display: none !important;
+    }
+
+    li[data-rovalra-sidebar-layout-key*="href:/plus"] > a > span:first-child {
+        margin: 0 !important;
+        flex: 0 0 auto !important;
+    }
 }
 
-// Removes roqols side bar collabse thingy
+// Removes roqols side bar collapse thingy
 .left-nav[data-rovalra-sidebar-collapse-ready='true']
     nav
     > li.nav-minimise-button {
